first section done

--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
     <div class="top-section">
       <div class="left-content">
         <div>
-          <img
-            src="/images/facebook-logo.svg"
-            alt="Logo"
-            height="260px"
-            width="300px"
-          />
+          <img src="/images/facebook-logo.svg" alt="Logo" width="auto" />
           <h2>
             Connect with friends and the world <br />
             around you on Facebook.
@@ -29,17 +24,18 @@
           />
           <input type="password" placeholder="Password" />
           <button id="btn-1">Log in</button>
-          <a>Forgot password?</a>
+          <a href="/">Forgot password?</a>
           <hr />
           <div>
             <button id="btn-2">Create new account</button>
           </div>
         </div>
         <div class="create-page">
-          <a id="a1" href="">Create a Page</a>for a celebrity, brand or business.
+          <a id="a1" href="">Create a Page</a>for a celebrity, brand or
+          business.
         </div>
       </div>
     </div>
-    <footer class="bottom-section">bottom</footer>
+    <footer>bottom</footer>
   </body>
 </html>
