fotter section done

--- a/index.html
+++ b/index.html
@@ -36,6 +36,67 @@
         </div>
       </div>
     </div>
-    <footer>bottom</footer>
+    <footer>
+      <div>
+        <ul id="ul-1">
+          <li><a id="lang" href="/">English (US)</a></li>
+          <li><a id="lang" href="/">Shqip</a></li>
+          <li><a id="lang" href="/">Italiano</a></li>
+          <li><a id="lang" href="/">Ελληνικά</a></li>
+          <li><a id="lang" href="/">Deutsch</a></li>
+          <li><a id="lang" href="/">Français (France)</a></li>
+          <li><a id="lang" href="/">Türkçe</a></li>
+          <li><a id="lang" href="/">Српски</a></li>
+          <li><a id="lang" href="/">Español</a></li>
+          <li><a id="lang" href="/">Português (Brasil)</a></li>
+          <li><a id="lang" href="/">العربية</a></li>
+          <li><a id="plus-btn" href="/">+</a></li>
+        </ul>
+      </div>
+      <hr id="hr-bottom" />
+      <div id="bottom-list">
+        <ul id="ul-2">
+          <div id="list-lines">
+            <li><a id="lang" href="/">Sign Up</a></li>
+            <li><a id="lang" href="/">Log In</a></li>
+            <li><a id="lang" href="/">Messenger</a></li>
+            <li><a id="lang" href="/">Facebook Lite</a></li>
+            <li><a id="lang" href="/">Video</a></li>
+            <li><a id="lang" href="/">Places</a></li>
+            <li><a id="lang" href="/">Games</a></li>
+            <li><a id="lang" href="/">Marketplace</a></li>
+            <li><a id="lang" href="/">Meta Pay</a></li>
+            <li><a id="lang" href="/">Meta Store</a></li>
+            <li><a id="lang" href="/">Meta Quest</a></li>
+            <li><a id="lang" href="/">Imagine with Meta AI</a></li>
+            <li><a id="lang" href="/">Instagram</a></li>
+          </div>
+          <div id="list-lines">
+            <li><a id="lang" href="/">Threads</a></li>
+            <li><a id="lang" href="/">Fundraisers</a></li>
+            <li><a id="lang" href="/">Services</a></li>
+            <li><a id="lang" href="/">Voting Information Center</a></li>
+            <li><a id="lang" href="/">Privacy Policy</a></li>
+            <li><a id="lang" href="/">Privacy Center</a></li>
+            <li><a id="lang" href="/">Groups</a></li>
+            <li><a id="lang" href="/">About</a></li>
+            <li><a id="lang" href="/">Create ad</a></li>
+            <li><a id="lang" href="/">Create Page</a></li>
+            <li><a id="lang" href="/">Developers</a></li>
+            <li><a id="lang" href="/">Careers</a></li>
+          </div>
+          <div id="list-lines">
+            <li><a id="lang" href="/">Cookies</a></li>
+            <li><a id="lang" href="/">Ad choices</a></li>
+            <li><a id="lang" href="/">Terms</a></li>
+            <li><a id="lang" href="/">Help</a></li>
+            <li>
+              <a id="lang" href="/">Contact Uploading & Non-UsersSettings</a>
+            </li>
+          </div>
+        </ul>
+      </div>
+      <div id="meta">Meta © 2024</div>
+    </footer>
   </body>
 </html>
